--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta charset="utf-8">
-        <meta name="keywords" content="spice, idle, spice idle, incremental">
-        <meta name="description" content="expand your spice empire">
+        <meta name="keywords" content="spice, idle, spice idle, incremental, red">
+        <meta name="description" content="expand your red spice empire">
         <title>Red Spice Idle</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;700">
         <link rel="stylesheet" type="text/css" href="style.css">
